separate controllers added for modules, lessons and connection with video service achieved